--- a/views/livres/liste.html.twig
+++ b/views/livres/liste.html.twig
@@ -29,7 +29,7 @@
                     <tr>
                         <td class="align-middle"><img src="./images/{{livre.image}}" width="60px"></td>
                         <td class="align-middle"><a href="/livres/{{livre._id}}">{{livre.nom}}</a></td>
-                        <td class="align-middle">{{livre.auteur}}</td>
+                        <td class="align-middle"><a href="/auteurs/{{livre.auteur._id}}">{{livre.auteur.nom}} {{livre.auteur.prenom}}</a></td>
                         <td class="align-middle">{{livre.pages}}</td>
                         <td class="align-middle"><a href="/livres/modification/{{livre._id}}" class="btn btn-warning">Modifier</a></td>
                         <td class="align-middle">
@@ -54,7 +54,11 @@
                         </div>
                         <div class="form-group">
                             <label for="auteur">Auteur</label>
-                            <input type="text" class="form-control" id="auteur" name="auteur">
+                            <select class="form-control" id="auteur" name="auteur">
+                                {% for auteur in auteurs %}
+                                    <option value="{{auteur.id}}">{{auteur.nom}} {{auteur.prenom}}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="nbPages">Nombre de pages</label>
