--- a/views/livres/show.html.twig
+++ b/views/livres/show.html.twig
@@ -56,7 +56,7 @@
             <div class="col-6">
 
                 <h2>Informations : </h2>
-                <div>Auteur : {{ livre.auteur }}</div>
+                <div>Auteur : <a href="/auteurs/{{livre.auteur._id}}">{{ livre.auteur.nom }} {{ livre.auteur.prenom }}</a></div>
                 <div>Nombre de Pages : {{ livre.pages }}</div>
                 <img src="/images/{{livre.image}}">
                     
