--- a/views/auteurs/auteur.html.twig
+++ b/views/auteurs/auteur.html.twig
@@ -5,14 +5,63 @@
 {% endblock %}
 
 {% block contenu %}
-    <h2>Nom : {{auteur.nom}}</h2>
-    <h2>Prénome : {{auteur.prenom}}</h2>
-    <div>Age : {{auteur.age}}</div>
-    <div>Sexe :
-        {% if auteur.sexe %}
-            Homme
-        {% else %}
-            Femme
-        {% endif %}    
-    </div>
+    {% if isModification %}
+        <form method="POST" action="/auteurs/modificationServer">
+                <fieldset>
+                    <legend>Modification d'un auteur</legend>
+                        <div class="form-group">
+                            <label for="nom">Nom</label>
+                            <input type="text" class="form-control" id="nom" name="nom" value="{{auteur.nom}}">
+                        </div>
+                        <div class="form-group">
+                            <label for="prenom">prenom</label>
+                            <input type="text" class="form-control" id="prenom" name="prenom" value="{{auteur.prenom}}">
+                        
+                        </div>
+                        <div class="form-group">
+                            <label for="age">age</label>
+                            <input type="number" class="form-control" id="age" name="age" value="{{auteur.age}}">
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="sexe" name="sexe"
+                            {% if auteur.sexe %}
+                                checked
+                            {% endif %}
+                            >
+                            <label class="form-check-label" for="sexe">Homme</label>
+                        </div>
+                        <input type="hidden" name="identifiant" value="{{auteur._id}}">   
+                        <button type="submit" class="btn btn-primary">Valider</button>
+                </fieldset>
+            </form>
+    {% else %}
+        <h2>Nom : {{auteur.nom}}</h2>
+        <h2>Prénome : {{auteur.prenom}}</h2>
+        <div>Age : {{auteur.age}}</div>
+        <div>Sexe :
+            {% if auteur.sexe %}
+                Homme
+            {% else %}
+                Femme
+            {% endif %}    
+        </div>
+
+        <h2 class="mt-3">Liste des Livres écrits</h2>
+
+        <div class="row mt-2">
+            {% for livre in auteur.livres %}
+            <div class="col-6">
+                    <div class="row">
+                    <div class="col-6">
+                        <image src="/images/{{livre.image}}" width="50%">
+                    </div>
+                    <div class="col-6">
+                        <h2>Nom : <a href="/livres/{{livre._id}}">{{livre.nom}}</a></h2>
+                        <div>Description : {{livre.description}}</div>
+                    </div>
+                </div>
+            </div>         
+            {% endfor %}
+        </div>
+    {% endif %}
 {% endblock %}
