--- a/views/livres/liste.html.twig
+++ b/views/livres/liste.html.twig
@@ -27,7 +27,7 @@
 
                 {% for livre in livres %}
                     <tr>
-                        <td class="align-middle"><img src="./images/{{livre.image}}" width="60px"></td>
+                        <td class="align-middle"><img src="/images/{{livre.image}}" width="60px"></td>
                         <td class="align-middle"><a href="/livres/{{livre._id}}">{{livre.nom}}</a></td>
                         <td class="align-middle"><a href="/auteurs/{{livre.auteur._id}}">{{livre.auteur.nom}} {{livre.auteur.prenom}}</a></td>
                         <td class="align-middle">{{livre.pages}}</td>
